# newsvlm-analysis

./: .gitignore  .gitmodules  README.md  pyproject.toml
archive/: README.md
artifacts/: README.md
prompts/: page_label_variant_b_prompt.txt  zoning_issue_classifier_prompt_v3_ontology_precision.txt  zoning_issue_classifier_prompt_v5_issue_schema_city_state_v4_1_strict_json_single_line.txt  zoning_issue_classifier_prompt_v5_issue_schema_city_state_v4_strict_json_single_line.txt  zoning_issue_classifier_prompt_v5_issue_schema_city_state_v5_strict_json_single_line.txt
reports/: prompt_accuracy_ab_manual_validation_20260228.md
scripts/: README.md  add_census_id_to_v2_metadata.py  build_fullnewspaper_v3_report.py  build_geo_backbone_crosswalk.py  build_packet_metadata_index.py  build_precision_audit_packet_v1.py  build_single_newspaper_demo_latex.py  check_classification_hardening_v1.py  enforce_precision_event_consistency_v1.py  export_issue_zoning_issue_classifier_batch_requests.py  export_newspaper_type_side_by_side.py  export_organized_zoning_corpus_v3.py  export_page_classification_requests_from_vlm.py  extract_zoning_text_from_panels.py  fullnewspaper_v3_common.py  llm_anchor_clean_v3.py  llm_event_cluster_v3.py  llm_event_collision_recheck_v4.py  llm_event_status_adjudicate_v3.py  llm_issue_classify_v3.py  llm_law_presence_v4.py  llm_page_tag_v3.py  llm_panel_longitudinal_v3.py  openai_batch_monitor_curl.py  openai_batch_submit_curl.py  prototype_zoning_panel_analysis.py  run_fullnewspaper_v3_pipeline.py  run_issue_numeric_extraction_pilot.py  (+11 more)
(+346 files in other folders)
